<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/white">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/win"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/congratulations"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"/>
    <Button
        android:id="@+id/again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/again"
        android:textColor="@color/white"
        app:backgroundTint="@null"
        android:background="@drawable/dialog_button"/>
    <Button
        android:id="@+id/home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/home"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:backgroundTint="@null"
        android:background="@drawable/dialog_button_white"/>
</LinearLayout>