<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/white">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/you_ve_been_busy"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="bold"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_margin="10dp">
        <Button
            android:id="@+id/leave_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/finish"
            android:textColor="@color/black"
            app:backgroundTint="@null"
            android:background="@drawable/dialog_button_white"/>
        <Button
            android:id="@+id/leave_continue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/_continue"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:backgroundTint="@null"
            android:background="@drawable/dialog_button"/>
    </LinearLayout>
</LinearLayout>