<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/white">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/oops"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="bold"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center">
        <TextView
            android:id="@+id/M_answer1"
            android:layout_width="30dp"
            android:layout_height="30dp" />
        <TextView
            android:id="@+id/M_answer2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="5dp" />
        <TextView
            android:id="@+id/M_answer3"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="5dp" />
        <TextView
            android:id="@+id/M_answer4"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="5dp" />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/don_t_give_up_try_again"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"/>
    <Button
        android:id="@+id/ML_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/again"
        android:textColor="@color/white"
        app:backgroundTint="@null"
        android:background="@drawable/dialog_button"/>
    <Button
        android:id="@+id/ML_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/home"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:backgroundTint="@null"
        android:background="@drawable/dialog_button_white"/>
</LinearLayout>