<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="5dp"
    android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/how_to_play"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="bold"/>
    <Button
        android:id="@+id/Q1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/_4_unique_numbers_and_8_chances"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:backgroundTint="@null"
        android:background="@drawable/dialog_button"/>
    <Button
        android:id="@+id/Q2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/_4_unique_numbers_and_10_chances"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:backgroundTint="@null"
        android:background="@drawable/dialog_button"/>
    <Button
        android:id="@+id/Q3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/_5_unique_numbers_and_12_chances"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:backgroundTint="@null"
        android:background="@drawable/dialog_button"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
            android:id="@+id/hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"/>
        </ScrollView>
    </LinearLayout>
</LinearLayout>